correcting a spacing issue so the long caption on the template comp project shows fully on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,11 @@
 }
 
 body {
-    margin-top: 120px;
+    margin-top: 80px;
 }
 
 header {
-    padding: 25px;
+    padding: 10px;
     background-color: rgba(255,255,255,0.8);
     position: fixed !important; /* overriding bootstrap */
     top: 0;
@@ -18,7 +18,7 @@ header {
 
 #logo, a #logo:link, a #logo:visited {
     opacity: 0.3;
-    width: 100px;
+    width: 75px;
 }
 
 a h1 {
@@ -31,9 +31,12 @@ a #logo:hover, a #logo:active {
 }
 
 nav {
-    display: inline-block;
-    width: calc(100% - 105px);
+    /*display: inline-block;*/
+    /*width: calc(100% - 80px);*/
     text-align: right;
+    position: absolute;
+    top: 65px;
+    right: 25px;
 }
 
 a:link, a:visited {
@@ -63,16 +66,20 @@ nav a:last-child, footer a:last-child {
     margin-right: 0 !important; /* overriding bootstrap */
 }
 
-section {
-    padding: 25px;
+section, footer {
+    padding: 0 20px 20px 20px;
 }
 
-/*section:first-child {
-    margin-top: 200px;
-}*/
+footer {
+    text-align: center;
+}
+
+#about, #contact {
+    display: none;
+}
 
 #myCarousel {
-    padding: 0;
+    z-index: -50;
 }
 
 .carousel-control.left, .carousel-control.right {
@@ -98,11 +105,6 @@ img {
 
 hr {
     margin: 50px 0 30px 0;
-}
-
-footer {
-    text-align: center;
-    padding: 25px;
 }
 
 i {
